--- a/Tattoojocky/app/src/main/res/layout/content_profile_scrolling.xml
+++ b/Tattoojocky/app/src/main/res/layout/content_profile_scrolling.xml
@@ -124,7 +124,7 @@
                     android:layout_height="wrap_content"
                     android:lineSpacingExtra="8dp"
                     android:layout_marginTop="10dp"
-                    android:text="@string/prompt_email"
+                    android:text="@string/prompt_phone"
                     android:drawablePadding="10dp"
                     android:gravity="center_vertical"
                     android:textColor="@color/black_grey"
