--- a/Tattoojocky/app/src/main/res/menu/activity_home_drawer.xml
+++ b/Tattoojocky/app/src/main/res/menu/activity_home_drawer.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <group android:checkableBehavior="single">
         <item
@@ -22,7 +23,8 @@
             <item
                 android:id="@+id/nav_noti"
                 android:icon="@drawable/ic_menu_send"
-                android:title="Notification" />
+                android:title="Notification"
+                app:actionLayout="@layout/notification_menu_layout"/>
         </menu>
     </item>
 
