--- a/Tattoojocky/app/src/main/res/layout/home_toolbar.xml
+++ b/Tattoojocky/app/src/main/res/layout/home_toolbar.xml
@@ -5,16 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
     android:background="?attr/colorPrimary"
-    app:navigationIcon="@drawable/ic_menu_black_24dp"
-    app:elevation="8dp"
-    app:layout_scrollFlags="scroll|enterAlways"
-    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+    app:contentInsetLeft="0dp"
+    app:contentInsetStart="0dp"
+    app:contentInsetStartWithNavigation="0dp"
+    app:theme="@style/AppTheme.Toolbar">
 
     <ImageView
         android:id="@+id/ivLogo"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:scaleType="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
         android:src="@drawable/logo" />
 </android.support.v7.widget.Toolbar>
