--- a/Tattoojocky/app/src/main/res/layout/activity_detail.xml
+++ b/Tattoojocky/app/src/main/res/layout/activity_detail.xml
@@ -68,7 +68,8 @@
         android:background="@color/black"
         android:transitionName="tNameHolder"
         android:id="@+id/placeNameHolder"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="gone">
 
       <TextView
           android:layout_width="match_parent"
