--- a/Tattoojocky/app/src/main/res/layout/app_bar_home.xml
+++ b/Tattoojocky/app/src/main/res/layout/app_bar_home.xml
@@ -10,11 +10,13 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:theme="@style/AppTheme.AppBarOverlay"
+       >
 
         <include
             android:id="@+id/toolbar"
-            layout="@layout/home_toolbar" />
+            layout="@layout/home_toolbar"
+            />
 
     </android.support.design.widget.AppBarLayout>
 
