--- a/Tattoojocky/app/src/main/res/layout/edit_profile_four.xml
+++ b/Tattoojocky/app/src/main/res/layout/edit_profile_four.xml
@@ -60,7 +60,7 @@
                 android:padding="10dp"
                 android:layout_alignParentRight="true"
                 android:background="@color/action_bar_title_page"
-                android:text="Upadate"/>
+                android:text="@string/update"/>
         </RelativeLayout>
 
 
