--- a/Tattoojocky/app/src/main/res/layout/item_feed.xml
+++ b/Tattoojocky/app/src/main/res/layout/item_feed.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?><!-- item_feed.xml -->
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:layout_margin="8dp"
-    card_view:cardCornerRadius="4dp">
+    android:layout_marginBottom="10dp"
+    card_view:cardCornerRadius="4dp"
+    app:cardElevation="8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
         <!--<ImageView-->
         <!--android:id="@+id/ivUserProfile"-->
@@ -37,7 +40,7 @@
             android:id="@+id/vImageRoot"
             android:layout_width="match_parent"
             android:layout_height="220dp"
-            android:padding="10dp">
+            android:layout_gravity="center">
 
             <ImageView
                 android:id="@+id/placeImage"
@@ -45,6 +48,7 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:scaleType="fitCenter"
+                android:src="@drawable/applogo"
                 android:adjustViewBounds="true"/>
 
             <View
