--- a/Tattoojocky/app/src/main/res/layout/notification_menu_layout.xml
+++ b/Tattoojocky/app/src/main/res/layout/notification_menu_layout.xml
@@ -7,6 +7,7 @@
         android:id="@+id/drawer_switch"
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
-        android:text=""/>
+        android:text=""
+        android:checked="true"/>
 
 </LinearLayout>
