--- a/Tattoojocky/app/src/main/res/layout/signup_view.xml
+++ b/Tattoojocky/app/src/main/res/layout/signup_view.xml
@@ -44,7 +44,7 @@
                     android:id="@+id/useNamerSignUp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/prompt_user_name"
+                    android:hint="@string/full_name"
                     android:inputType="textCapCharacters|textAutoCorrect"
                     android:maxLines="1"
                     android:textSize="@dimen/login_input_textsize"
@@ -115,6 +115,26 @@
                     android:textColor="@color/grey"/>
 
             </android.support.design.widget.TextInputLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:layout_marginTop="16dp">
+                <CheckBox
+                    android:id="@+id/tcCheckbox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:id="@+id/tcText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/orange"
+                    android:textSize="@dimen/TextSizeSmall"
+                    android:text="@string/termconditionlink"
+                    android:onClick="handleLink"/>
+
+            </LinearLayout>
 
             <Button
                 style="@style/ButtonAppTheme"
